--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-4/epa01-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-4/epa01-4.component.html
@@ -1,401 +1,115 @@
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-  <span>จัดการข้อมูลต้นทาง</span>
-</div>
-
-<div class="ui attached segment">
-  <div class="ui grid center aligned">
-    <div class="sixteen wide column">
-      <h3>เชื่อมโยงข้อมูลใบขน (ภส.05-01)</h3>
-    </div>
+    <span>จัดการข้อมูลต้นทาง</span>
   </div>
-  <br>
-  <div class="inline fields">
-    <div class="four wide field ">
-      <h4>ข้อมูลผู้ส่งออก</h4>
-    </div>
-  </div>
-  <div class="ui form">
-    <input type="hidden" value="searchFlag">
-    <div class="inline fields">
-      <div class="one wide field "></div>
-      <div class="three wide field ">
-        <label>ชื่อ :</label>
-      </div>
-      <div class="four wide field">
-        <input type="text" value="{{datas.exciseName}}">
-      </div>
-      <div class="three wide field ">
-        <label>เลขบัตรประชาชน/เลขทะเบียนนิติบุคคล :</label>
-      </div>
-      <div class="four wide field disabled input">
-        <input type="text">
+  
+  <div class="ui attached segment">
+    
+    <div class="ui grid center aligned">
+      <div class="sixteen wide column">
+        <h3>เชื่อมโยงข้อมูลใบขน (ภส.05-01)</h3>
       </div>
     </div>
-
-    <div class="inline fields">
-      <div class="one wide field"></div>
-      <div class="three wide field ">
-        <label>เลขที่สาขาภาษีมูลค่าเพิ่ม (ถ้ามี) :</label>
-      </div>
-      <div class="four wide field disabled input">
-        <input type="text">
-      </div>
-    </div>
-
     <br>
     <div class="inline fields">
       <div class="four wide field ">
-        <h4>ข้อมูลนำสินค้าออก</h4>
+        <h4>ข้อมูลผู้ส่งออก</h4>
       </div>
     </div>
-    <div class="inline fields">
-      <div class="one wide field"></div>
-      <div class="three  wide field ">
-        <label>ขอนำสินค้าออกจาก :</label>
-      </div>
-      <div class="four wide field">
-        <input type="text" value="{{datas.exciseName2}}">
-      </div>
-      <div class="three wide field ">
-        <label>ทะเบียนสรรพสามิต :</label>
-      </div>
-      <div class="four wide field">
-        <input type="text" value="{{datas.exciseId2}}">
-      </div>
-    </div>
-
-    <div class="inline fields">
-      <div class="one wide field"></div>
-      <div class="three wide field ">
-        <label>เพื่อ :</label>
-      </div>
-      <div class="four wide field">
-        <input type="text" value="{{exportType}}">
-      </div>
-    </div>
-
-  </div>
-
-</div>
-
-<!-- ///// Datatable Segment ///// -->
-<div class="ui segment" style="width: 100%;">
-
-  <input type="hidden" [(ngModel)]="exciseId">
-  <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%;">
-    <thead>
-      <tr style="text-align: center;">
-        <th>รายการ</th>
-        <th>หมายเลขการตรวจ</th>
-        <th>ประเภท</th>
-        <th>ชื่อสินค้าและชนิด</th>
-        <th>แบบ/รุ่น</th>
-        <th>ขนาด</th>
-        <th>จำนวน</th>
-        <th>ราคาขายปลีกแนะนำ</th>
-        <th>ภาษีตามมูลค่าร้อยละ </th>
-        <th>ภาษีตามปริมาณ </th>
-        <th>จำนวนภาษี </th>
-        <th>ทำรายการ </th>
-      </tr>
-    </thead>
-  </table>
-
-  <br>
-  <div class="ui center aligned grid">
-    <div class="four wide column">
-      <button class="ui mini button" style="width: 100px;" (click)="onClickBack()">
-        ย้อนกลับ
-      </button>
-    </div>
-  </div>
-
-</div>
-
-<!-- Modal Show -->
-<div class="ui modal" id="ModalShow" style="width: 90%;">
-
-  <div class="header" style="background: #1e83db;color: white">
-    การตรวจปล่อยสินค้า
-  </div>
-
-  <div class="scrolling content" style="height: 600px !important;">
-
     <div class="ui form">
-      <div class="ui grid">
-        <!-- column 1 -->
-        <div class="eight wide field" style="text-align: center;">
-          <label>ข้อมูลการตามแบบคำขอยกเว้นหรือคืนภาษี (แบบเลขที่ {{datas.taxReNumber2}} ) :</label>
-        </div>
-        <!-- column 2 -->
-        <div class="eight wide field" style="text-align: center;">
-          <label>ข้อมูลการนำสินค้าออกจากโรงอุตสาหกรรม :</label>
-        </div>
-      </div>
-      <hr><br>
-
+      <input type="hidden" value="searchFlag">
       <div class="inline fields">
-        <!-- column 1 -->
-        <div class="three wide field">
-          <p>ชื่อผุ้ส่งออก :</p>
+        <div class="one wide field "></div>
+        <div class="three wide field ">
+          <label>ชื่อ :</label>
         </div>
         <div class="four wide field">
-          <label>{{datas.exciseName}}</label>
+          <input type="text" [value]="formVo.cusName" >
         </div>
-        <div class="two wide field"></div>
-        <!-- column 2 -->
-        <div class="three wide field">
-          <p>ชื่อผุ้ส่งออก :</p>
+        <div class="three wide field ">
+          <label>เลขบัตรประชาชน/เลขทะเบียนนิติบุคคล :</label>
         </div>
-        <div class="four wide field">
-          <input type="text" [(ngModel)]="saveDatas.exciseName2">
+        <div class="four wide field disabled input">
+          <input type="text" [value]="formVo.tin"  >
         </div>
       </div>
-
+  
       <div class="inline fields">
-        <!-- column 1 -->
-        <div class="three wide field">
-          <p>สำนักงานสรรพสามิตต้นทาง :</p>
+        <div class="one wide field"></div>
+        <div class="three wide field ">
+          <label>เลขที่สาขาภาษีมูลค่าเพิ่ม (ถ้ามี) :</label>
         </div>
-        <div class="four wide field">
-          <label>{{datas.officeArea}}</label>
-        </div>
-        <div class="two wide field"></div>
-        <!-- column 2 -->
-        <div class="three wide field">
-          <p>สำนักงานสรรพสามิตต้นทาง :</p>
-        </div>
-        <div class="four wide field">
-          <input type="text" [(ngModel)]="saveDatas.officeArea">
+        <div class="four wide field disabled input">
+          <input type="text"  [value]="formVo.vatNo" >
         </div>
       </div>
-
-      <div class="inline fields">
-        <!-- column 1 -->
-        <div class="three wide field">
-          <p>ด่านส่งออกสินค้าปลายทาง :</p>
-        </div>
-        <div class="four wide field">
-          <label>สำนักงานสรรพสามิต {{datas.destination2}}</label>
-        </div>
-        <div class="two wide field"></div>
-        <!-- column 2 -->
-        <div class="three wide field">
-          <p>ด่านส่งออกสินค้าปลายทาง :</p>
-        </div>
-        <div class="four wide field">
-          <input type="text" [(ngModel)]="saveDatas.destination2">
-        </div>
-      </div>
-
-      <div class="inline fields">
-        <!-- column 1 -->
-        <div class="three wide field">
-          <p>สำนักงานสรรพสามิตปลายทาง :</p>
-        </div>
-        <div class="four wide field">
-          <label>สำนักงานสรรพสามิต {{datas.destination2}}</label>
-        </div>
-        <div class="two wide field"></div>
-        <!-- column 2 -->
-        <div class="three wide field">
-          <p>สำนักงานสรรพสามิตปลายทาง :</p>
-        </div>
-        <div class="four wide field">
-          <input type="text" [(ngModel)]="saveDatas.destination2">
-        </div>
-      </div>
-
-      <div class="inline fields">
-        <!-- column 1 -->
-        <div class="three wide field">
-          <p>วันที่นำสินค้าออก :</p>
-        </div>
-        <div class="four wide field">
-          <label>{{datas.dateOut2}}</label>
-        </div>
-        <div class="two wide field"></div>
-        <!-- column 2 -->
-        <div class="three wide field">
-          <p>วันที่นำสินค้าออก :</p>
-        </div>
-        <div class="four wide field">
-          <input type="text" [(ngModel)]="saveDatas.dateOut2">
-        </div>
-      </div>
-
-      <div class="inline fields">
-        <!-- column 1 -->
-        <div class="three wide field">
-          <p>ชนิดของสินค้า :</p>
-        </div>
-        <div class="four wide field">
-          <label>{{datas.productName2}}</label>
-        </div>
-        <div class="two wide field"></div>
-        <!-- column 2 -->
-        <div class="three wide field">
-          <p>ชนิดของสินค้า :</p>
-        </div>
-        <div class="four wide field">
-          <input type="text" [(ngModel)]="saveDatas.productName2">
-        </div>
-      </div>
-
-      <div class="inline fields">
-        <!-- column 1 -->
-        <div class="three wide field">
-          <p>ปริมาณของสินค้า :</p>
-        </div>
-        <div class="four wide field">
-          <label>{{datas.quantity}}</label>
-        </div>
-        <div class="two wide field"></div>
-        <!-- column 2 -->
-        <div class="three wide field">
-          <p>ปริมาณของสินค้า :</p>
-        </div>
-        <div class="four wide field">
-          <input type="text" [(ngModel)]="saveDatas.quantity">
-        </div>
-      </div>
-
-      <div class="inline fields">
-        <!-- column 1 -->
-        <div class="three wide field">
-          <p>ชื่อหรือเลขทะเบียนพาหนะ :</p>
-        </div>
-        <div class="four wide field">
-          <label>-</label>
-        </div>
-        <div class="two wide field"></div>
-        <!-- column 2 -->
-        <div class="three wide field">
-          <p>ชื่อหรือเลขทะเบียนพาหนะ :</p>
-        </div>
-        <div class="four wide field">
-          <input type="text" [(ngModel)]="saveDatas.vehicleNo">
-        </div>
-      </div>
-
-      <div class="inline fields">
-        <!-- column 1 -->
-        <div class="three wide field">
-          <p>เส้นทางการขนส่ง :</p>
-        </div>
-        <div class="four wide field">
-          <label>-</label>
-        </div>
-        <div class="two wide field"></div>
-        <!-- column 2 -->
-        <div class="three wide field">
-          <p>เส้นทางการขนส่ง :</p>
-        </div>
-        <div class="four wide field">
-          <input type="text" [(ngModel)]="saveDatas.logisticWay">
-        </div>
-      </div>
-      <hr>
+  
       <br>
-
-      <div class="ui grid">
-        <!-- column 1 -->
-        <div class="eight wide field" style="text-align: center;">
-          <label>จำนวนและหมายเลขดวงตรากรมสรรพสามิต :</label>
-        </div>
-        <!-- column 2 -->
-        <div class="eight wide field" style="text-align: center;">
-          <label>จำนวนและหมายเลขดวงตรากรมสรรพสามิต :</label>
+      <div class="inline fields">
+        <div class="four wide field ">
+          <h4>ข้อมูลนำสินค้าออก</h4>
         </div>
       </div>
-      <br>
-
-      <div class="ui grid">
-        <div class="two column row">
-          <!-- column 1 Tax Stamp -->
-          <div class="column">
-
-            <div class="inline fields" *ngFor="let item of taxStampNo; let i = index">
-              <div class="two wide field">
-                <p>ดวงที่ {{i+1}}</p>
-              </div>
-              <div class="eight wide field">
-                <input type="text" [(ngModel)]="datas.stampName">
-              </div>
-              <div class="four wide field">
-                <button class="ui mini green button" (click)="addTaxField()">
-                  <i class="plus icon"></i>
-                  เพิ่ม
-                </button>
-                <button class="ui mini red button" (click)="delTaxField(i)">
-                  ลบ
-                </button>
-              </div>
-            </div>
-
-          </div>
-          <!-- column 2 Factory Stamp -->
-          <div class="column">
-
-            <div class="inline fields" *ngFor="let item of factoryStampNo; let i = index">
-              <div class="two wide field"></div>
-              <div class="two wide field">
-                <p>ดวงที่ {{i+1}}</p>
-              </div>
-              <div class="eight wide field">
-                <input type="text" [(ngModel)]="saveDatas.stampName">
-              </div>
-              <div class="four wide field">
-                <button class="ui mini green button" (click)="addFactoryField()">
-                  <i class="plus icon"></i>
-                  เพิ่ม
-                </button>
-                <button class="ui mini red button" (click)="delFactoryField(i)">
-                  ลบ
-                </button>
-              </div>
-            </div>
-
-          </div>
+      <div class="inline fields">
+        <div class="one wide field"></div>
+        <div class="three  wide field ">
+          <label>ขอนำสินค้าออกจาก :</label>
+        </div>
+        <div class="four wide field">
+          <input type="text"  [value]="formVo.facname" >
+        </div>
+        <div class="three wide field ">
+          <label>ทะเบียนสรรพสามิต :</label>
+        </div>
+        <div class="four wide field">
+          <input type="text"  [value]="formVo.cusNewRegid" >
         </div>
       </div>
-      <hr>
-      <br>
-
-      <!-- Radio Box -->
-      <div class="ui grid center aligned">
-        <div class="inline fields">
-          <label>ผลการตรวจ:</label>
-          <div class="field">
-            <div class="ui radio checkbox">
-              <input type="radio" name="result" [(ngModel)]="datas.resultDtl" value="1">
-              <label>ผ่าน</label>
-            </div>
-          </div>
-          <div class="field">
-            <div class="ui radio checkbox">
-              <input type="radio" name="result" [(ngModel)]="datas.resultDtl" value="0">
-              <label>ไม่ผ่าน</label>
-            </div>
-          </div>
+  
+      <div class="inline fields">
+        <div class="one wide field"></div>
+        <div class="three wide field ">
+          <label>เพื่อ :</label>
+        </div>
+        <div class="four wide field">
+          <input type="text"  [value]="formVo.remark"  >
         </div>
       </div>
-
-      <!-- Comment Box -->
-      <div class="ui grid center aligned">
-        <div class="fields">
-          <textarea rows="5" cols="100" [(ngModel)]="datas.comment1Dtl"></textarea>
-        </div>
-      </div>
-
+  
     </div>
+  
   </div>
-
-  <div class="actions">
-    <div class="ui icon deny button">
-      <i class="close icon"></i>
-      ปิด
+  
+  <!-- ///// Datatable Segment ///// -->
+  <div class="ui segment" style="width: 100%;">
+  
+    <input type="hidden" [(ngModel)]="exciseId">
+    <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%;">
+      <thead>
+        <tr style="text-align: center;">
+          <th>รายการ</th>
+          <th>ประเภท</th>
+          <th>ชื่อสินค้าและชนิด</th>
+          <th>แบบ/รุ่น</th>
+          <th>ขนาด</th>
+          <th>จำนวน</th>
+          <th>ราคาขายปลีกแนะนำ</th>
+          <th>ภาษีตามมูลค่าร้อยละ </th>
+          <th>ภาษีตามปริมาณ </th>
+          <th>จำนวนภาษี </th>
+          <th>ทำรายการ </th>
+        </tr>
+      </thead>
+    </table>
+  
+    <br>
+    <div class="ui center aligned grid">
+      <div class="four wide column">
+        <button class="ui mini button" style="width: 100px;" (click)="onClickBack()">
+          ย้อนกลับ
+        </button>
+      </div>
     </div>
+  
   </div>
-
-</div>
+  
+  
