--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa02/epa02-3/epa02-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa02/epa02-3/epa02-3.component.html
@@ -289,7 +289,7 @@
                 <i class="save icon"></i>
                 บันทึกข้อมูลการตรวจ
             </div>
-            <div class="ui icon deny button">
+            <div class="ui icon deny button" (click)="onClickBack()" >
                 <i class="close icon"></i>
                 ยกเลิกการบันทึกข้อมูล
             </div>
