--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4-1/int05-4-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4-1/int05-4-1.component.html
@@ -135,9 +135,9 @@
                         <table id="table1" class="ui small celled table striped selectable" style="width: 100%;">
                             <thead>
                                 <tr style="text-align: center;">
-                                    <th rowspan="2">รายการจัดซื้อจัดจ้าง <span style="color: red">*</span></th>
+                                    <th rowspan="2">รายการจัดซื้อจัดจ้าง</th>
                                     <th rowspan="2">จำนวน</th>
-                                    <th rowspan="2">หน่วยนับ <span style="color: red">*</span></th>
+                                    <th rowspan="2">หน่วยนับ</th>
                                     <th rowspan="2">ราคาที่ตั้งไว้ต่อหน่วย</th>
                                     <th rowspan="2">ราคากลางต่อหน่วย</th>
                                     <th rowspan="2">ราคาซื้อ/จ้าง/เช่า ต่อหน่วย</th>
