--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-15/ts01-15.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-15/ts01-15.component.html
@@ -15,7 +15,7 @@
                     </div>
 
                     <div class="five wide field">
-                        <input type="text">
+                        <input type="text" [(ngModel)]="obj.office" name="office" id="office">
                     </div>
 
                     <div class="one wide field">
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="two wide field">
-                        <input type="text">
+                        <input type="text"  [(ngModel)]="obj.date" name="date" id="date">
                     </div>
 
                     <div class="one wide field" style="padding-right: 0px;">
@@ -31,7 +31,7 @@
                     </div>
 
                     <div class="two wide field">
-                        <input type="text">
+                        <input type="text"  [(ngModel)]="obj.month" name="month" id="month">
                     </div>
 
                     <div class="one wide field">
@@ -39,7 +39,7 @@
                     </div>
 
                     <div class="two wide field">
-                        <input type="text">
+                        <input type="text"  [(ngModel)]="obj.year" name="year" id="year">
                     </div>
                 </div>
 
@@ -49,7 +49,7 @@
                     </div>
 
                     <div class="six wide field">
-                        <input type="text">
+                        <input type="text" [(ngModel)]="obj.ourself" name="ourself" id="ourself">
                     </div>
 
                     <div class="eight wide field">
@@ -62,7 +62,7 @@
                     </div>
 
                     <div class="six wide field">
-                        <input type="text">
+                        <input type="text" [(ngModel)]="obj.account" name="account" id="account">
                     </div>
 
                     <div class="four wide field">
@@ -70,7 +70,7 @@
                     </div>
 
                     <div class="four wide field">
-                        <input type="text">
+                        <input type="text"  [(ngModel)]="obj.exciseRegistration" name="exciseRegistration" id="exciseRegistration">
                     </div>
                 </div>
 
@@ -80,7 +80,7 @@
                     </div>
 
                     <div class="fourteen wide field">
-                        <textarea name="" id="" cols="30" rows="4" style="resize: none;"></textarea>
+                        <textarea name="" id="" cols="30" rows="4" style="resize: none;" [(ngModel)]="obj.addressNumber" name="addressNumber" id="addressNumber"></textarea>
                     </div>
                 </div>
 
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="six wide field">
-                        <input type="text">
+                        <input type="text" [(ngModel)]="obj.consentor" name="consentor" id="consentor">
                     </div>
 
                     <div class="seven wide field">
@@ -150,7 +150,7 @@
                     </div>
 
                     <div class="six wide field">
-                        <input type="text">
+                        <input type="text"  [(ngModel)]="obj.inspector" name="inspector" id="inspector">
                     </div>
 
                     <div class="seven wide field">
@@ -163,7 +163,7 @@
                     </div>
 
                     <div class="six wide field">
-                        <input type="text">
+                        <input type="text"  [(ngModel)]="obj.witness1" name="witness1" id="witness1">
                     </div>
 
                     <div class="seven wide field">
@@ -176,7 +176,7 @@
                     </div>
 
                     <div class="six wide field">
-                        <input type="text">
+                        <input type="text"  [(ngModel)]="obj.witness2" name="witness2" id="witness2">
                     </div>
 
                     <div class="seven wide field">
