--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-16/ts01-16.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-16/ts01-16.component.html
@@ -355,7 +355,7 @@
               พิมพ์เอกสาร
             </button>
             <button class="ui mini red button" type="button" (click)="onDiscard()">
-              <i class="times icon"></i>
+              <i class="close icon"></i>
               ยกเลิก
             </button>
         </div>
