--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/ApprovedToGoToWork.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/ApprovedToGoToWork.jrxml
@@ -36,8 +36,8 @@
 				</textElement>
 				<textFieldExpression><![CDATA["บันทึกข้อความ"]]></textFieldExpression>
 			</textField>
-			<image hAlign="Center" vAlign="Middle" isUsingCache="false">
-				<reportElement isPrintRepeatedValues="false" x="39" y="0" width="80" height="69" uuid="9f19e5d3-7072-46f2-8454-6b0bc55dac0d"/>
+			<image hAlign="Center" vAlign="Middle" isUsingCache="true">
+				<reportElement x="39" y="0" width="80" height="69" uuid="9f19e5d3-7072-46f2-8454-6b0bc55dac0d"/>
 				<imageExpression><![CDATA[$P{logo1}]]></imageExpression>
 			</image>
 			<textField>
@@ -105,16 +105,16 @@
 				</textElement>
 				<textFieldExpression><![CDATA["เรียน"]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement stretchType="RelativeToBandHeight" x="101" y="67" width="407" height="22" uuid="0a74275c-81ed-4560-97bd-d5563b6e8b16"/>
-				<box topPadding="3" leftPadding="0" rightPadding="0">
+				<box topPadding="3" leftPadding="10" rightPadding="0">
 					<pen lineWidth="0.0"/>
 					<bottomPen lineWidth="1.0" lineStyle="Dotted"/>
 				</box>
 				<textElement verticalAlignment="Bottom">
 					<font fontName="TH Sarabun New" size="14"/>
 				</textElement>
-				<textFieldExpression><![CDATA["     "+$P{governmentService}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{governmentService}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="63" y="153" width="446" height="19" uuid="9b67a292-519e-4966-89f8-045b32cfd290"/>
